updated portfolio website to be semi-responsive
changed css file to include image wrap so images shrink proportionally. Also linked works to png or pdf files.

--- a/index.html
+++ b/index.html
@@ -28,55 +28,57 @@
 	<!-- class="freezeframe" -->
 <!-- row2 -->
 		<div class="box2">
-			<a href="core-studio/readingresponses/index.html"><img  src="gifs/pacegallery.gif" height="100%" width="100%"></a>
-			<br>
-			pace gallery guide
+			<a href="images/pace.png"><div class="imagewrap"><img  src="gifs/pacegallery.gif" height="100%" width="100%"></a>pace gallery guide
+		</div>	<br>
+			
 		</div>
 
 
 		<div class="box3">
-			<a href="lab-assignments/documentation/index.html"><img  src="gifs/recipepages.gif" height="100%" width="100%"></a>
+			<a href="images/bakebook.pdf"><div class="imagewrap"><img  src="gifs/recipepages.gif" height="100%" width="100%"></a>typeset recipebook </div>
 			<br>
-			typeset recipebook 
+			
 		</div>
 
 		<div class="box4">
-			<a href="core-studio/assignments/index.html"><img  src="gifs/inthedullvillage.gif" height="100%" width="100%"></a>
+			<a href="images/inthedullvillage.png"><div class="imagewrap"><img  src="gifs/inthedullvillage.gif" height="100%" width="100%"></a>in the dull village</div>
 			<br>
-			in the dull village
+			
 		</div>
 
 		
 <!-- row3 -->
 		<div class="box5">
-			<a href="lab-assignments/documentation/index.html"><img  src="gifs/momapages.gif" height="100%" width="100%"></a>
+			<a href="images/momabrochure.pdf"><div class="imagewrap"><img  src="gifs/momapages.gif" height="100%" width="100%"></a>moma handles brochure</div>
 			<br>
-			moma <em>handles</em> brochure
+			
 		</div>
 
 		<div class="box6">
-			<a href="lab-assignments/borschtassignment1/index.html"><img  src="gifs/datavisjourney.gif" height="100%" width="100%"></a>
+			<a href="images/datavisjourney.png"><div class="imagewrap"><img  src="gifs/datavisjourney.gif" height="100%" width="100%"></a>data vis. infographic</div>
 			<br>
-			data vis. infographic
+			
 		</div>
 
 		<div class="box7">
-			<a href="lab-assignments/documentation/index.html"><img  src="gifs/colorfilmpics.gif" height="100%" width="90%"></a>
-			<br>
-			color 35mm
+			<a href="images/colorfilm.pdf"><div class="imagewrap"><img  src="gifs/colorfilmpics.gif" height="100%" width="100%"></a>color 35mm</div>
+		<br>
+			
 		</div>
 
 		<div class="box8">
-			<a href="lab-assignments/documentation/index.html"><img  src="gifs/debatebook.gif" height="100%" width="100%"></a>
+			<a href="images/debatefinal.pdf"><div class="imagewrap"><img  src="gifs/debatebook.gif" height="100%" width="100%"></a>wim crouwel vs. van toorn</div>
+
 			<br>
-			wim crouwel vs. van toorn
+			
+			
 		</div>
 
 		<div class="box9">
-			<a href="lab-assignments/documentation/index.html"><img  src="gifs/bwfilmpics.gif" height="100%" width="90%"></a>
+			<a href="images/bwfilm.pdf"><div class="imagewrap"><img  src="gifs/bwfilmpics.gif" height="100%" width="100%"></a> b/w 35m </div>
 			<br>
-			b/w 35mm
 		</div>
+
 	</div>
 
 <!-- 
@@ -92,4 +94,3 @@ new Freezeframe();
 
 </body>
 </html>
-
