included instagram link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- row1 -->
 
 		<div class="box1">
-		<a href="images/Vivian_Lin_Resume.pdf"><span class="myname">vivian lin</span></a> is a new york based graphic designer interested in <br>branding, photography, data-visualization, and social-media. <br>she's a lover of galliard, lower-case typesetting, hojicha, css, <br>schubert, people-watching, books, and citybiking ;)
+		<a href="images/Vivian_Lin_Resume.pdf"><span class="myname">vivian lin</span></a> is a new york based graphic designer interested in <br>branding, photography, data-visualization, and <a href="https://www.instagram.com/vivixnart">social media</a>. <br>she's a lover of galliard, lower-case typesetting, hojicha, css, <br>schubert, people-watching, books, and citybiking ;)
 			
 		</div>
 		
