added digital photography, wtc, video

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		
 <!-- row3 -->
 		<div class="box5">
-			<a href="images/momabrochure.pdf"><div class="imagewrap"><img  src="gifs/momapages.gif" height="100%" width="100%"></a>moma handles brochure</div>
+			<a href="images/Momabrochure.pdf"><div class="imagewrap"><img  src="gifs/momapages.gif" height="100%" width="100%"></a>moma handles brochure</div>
 			<br>
 			
 		</div>
@@ -61,13 +61,13 @@
 		</div>
 
 		<div class="box7">
-			<a href="images/colorfilm.pdf"><div class="imagewrap"><img  src="gifs/colorfilmpics.gif" height="100%" width="100%"></a>color 35mm</div>
+			<a href="images/debatefinal.pdf"><div class="imagewrap"><img  src="gifs/debatebook.gif" height="100%" width="100%"></a>wim crouwel vs. van toorn</div>
 		<br>
 			
 		</div>
 
 		<div class="box8">
-			<a href="images/debatefinal.pdf"><div class="imagewrap"><img  src="gifs/debatebook.gif" height="100%" width="100%"></a>wim crouwel vs. van toorn</div>
+			<a href="images/colorfilm.pdf"><div class="imagewrap"><img  src="gifs/colorfilmpics.gif" height="100%" width="100%"></a>color 35mm</div>
 
 			<br>
 			
@@ -79,7 +79,43 @@
 			<br>
 		</div>
 
-	</div>
+<!-- row3 -->
+
+		<div class="box10">
+			<a href="images/digitalpics.pdf"><div class="imagewrap"><img  src="gifs/digitalpics.gif" height="100%" width="100%"></a>digital photography</div>
+			<br>
+		</div>
+
+		<div class="box11">
+			<a href="vids/vid.mp4"><div class="imagewrap"><img  src="gifs/vid2.gif" height="100%" width="100%"></a> a nostalgic short film</div>
+			<br>
+		</div>
+
+		<div class="box12">
+			<a href="images/wtc1.pdf"><div class="imagewrap"><img  src="gifs/wtcmerch.gif" height="100%" width="100%"></a> wtc merchandise</div>
+			<br>
+		</div>
+
+		<div class="box13">
+			<a href="images/wtc2.pdf"><div class="imagewrap"><img  src="gifs/wtcsocial.gif" height="100%" width="100%"></a>
+			socials + oculus signage </div>
+			<br>
+		</div>
+
+
+<!-- row4 -->
+
+
+
+<!-- 
+<div class="content">
+  <h1>Sticky Footer with Grid</h1>
+  <p><button id="add">Sorry this site is not responsive...yet! I'm hope to get it working for mobile soon... :)</button></p>
+</div> -->
+<footer class="footer">
+  Sorry this site is not responsive...yet! I hope to get it working for mobile soon...
+</footer>
+		
 
 <!-- 
 <img
