fixed video link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		</div>
 
 		<div class="box11">
-			<a href="vids/vid.mp4"><div class="imagewrap"><img  src="gifs/vid2.gif" height="100%" width="100%"></a> a nostalgic short film</div>
+			<a href="vids/vid2.mp4"><div class="imagewrap"><img  src="gifs/vid.gif" height="100%" width="100%"></a> a nostalgic short film</div>
 			<br>
 		</div>
 
