--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>viv's work</title>
+	<title>vivian lin 林思佳</title>
 	<link rel="stylesheet" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=EB+Garamond|Cormorant+Garamond|Sacramento&display=swap" rel="stylesheet">
 
