changed in the dull village to sweetgreen

--- a/page2/index.html
+++ b/page2/index.html
@@ -41,7 +41,7 @@
 		</div>
 
 		<div class="box4">
-			<a href="images/inthedullvillage.png"><div class="imagewrap"><img  src="gifs/inthedullvillage.gif" height="100%" width="100%"></a>in the dull village</div>
+			<a href="images/sweetgreen.jpg"><div class="imagewrap"><img  src="gifs/sweetgreen.gif" height="100%" width="100%"></a>sweetgreen anatomy</div>
 			<br>
 			
 		</div>
