updated link of sweetgreen image so the image type matches file

--- a/page2/index.html
+++ b/page2/index.html
@@ -41,7 +41,7 @@
 		</div>
 
 		<div class="box4">
-			<a href="images/sweetgreenvis.jpg"><div class="imagewrap"><img  src="gifs/sweetgreenvis.gif" height="100%" width="100%"></a>sweetgreen anatomy</div>
+			<a href="images/sweetgreenvis.jpeg"><div class="imagewrap"><img  src="gifs/sweetgreenvis.gif" height="100%" width="100%"></a>sweetgreen anatomy</div>
 			<br>
 			
 		</div>
