added some typewriter background on front page of site

--- a/page2/index.html
+++ b/page2/index.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=EB+Garamond|Cormorant+Garamond|Sacramento&display=swap" rel="stylesheet">
 
-<script src="freezeframe.min.js"></script>
-
+<!-- <script src="freezeframe.min.js"></script>
+ -->
 
 </head>
 <body>
