--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>vivian lin 林思佳</title>
 
 	<link rel="stylesheet" href="main.css">
+	<link href="https://fonts.googleapis.com/css?family=EB+Garamond|Cormorant+Garamond|Sacramento&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -17,9 +18,24 @@
     <img src="images/background1.svg" id="circle">
   </div>
 
+<h1 id="text"></h1>
+
+<script type="text/javascript">
+// var word = "";
+document.onkeypress = function(event) {
+	// get what's already inside the header
+	var text = document.getElementById("text").innerHTML;
+	// add our letter to the end of text
+	text = text + event.key;
+
+	document.getElementById("text").innerHTML = text;
+		// header.style.color = "lightpink";
+		// header.style.fonts = "garamond";
+}
 
 
 
+</script>
 
 
 </body>
