--- a/page2/index.html
+++ b/page2/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Object Collection</title>
+  <title>vivian lin 林思佳</title>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Cormorant+Garamond|Sacramento&display=swap" rel="stylesheet">
