--- a/page2/index.html
+++ b/page2/index.html
@@ -17,7 +17,7 @@
     <div id= "info">  vivian lin is a new york based graphic designer interested in<br> 
 branding, photography, data-visualization, and social media.<br> 
 she's a fan of galliard, hojicha,
-schubert, books, and citybiking;) <br><br><br>  </div>
+schubert, books, and citibiking;) <br><br><br>  </div>
 
 </body>
   <script type="text/javascript" src="main.js"></script>
