--- a/page2/index.html
+++ b/page2/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div id= "info">  vivian lin is a new york based graphic designer interested in<br> 
-branding, photography, data-visualization, and social media.<br> 
+branding, photography, data-visualization, css, and social media.<br> 
 she's a fan of galliard, hojicha,
 schubert, books, and citibiking;) <br><br><br>  </div>
 
