added type js effect/ toggle scrollbar
added to pg 2

--- a/page2/index.html
+++ b/page2/index.html
@@ -14,11 +14,56 @@
 
 <body>
 
-    <div id= "info">  vivian lin is a new york based graphic designer interested in<br> 
+   
+ <div id= "info">  hi! i am vivian lin, a new york based graphic designer interested in<br> 
 branding, photography, data-visualization, css, and social media.<br> 
-she's a fan of galliard, hojicha,
-schubert, books, and citibiking;) <br><br><br>  </div>
+i am a big fan of galliard, hojicha,schubert, books, and citibiking;) <br><br>  </div>
+
+
+ <div class="menu">
+<div id="projsHeading" class="slideDown"><mark>here are my projects</mark></div>
+      <div class="projectsTab">
+      🎨&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/pace.png'>pace gallery guide</a>
+  </div>
+       <div class="projectsTab">
+      🥗&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/sweetgreenvis.jpeg'>anatomy of sweetgreen</a>
+ </div>
+      <div class="projectsTab">
+      🖼️&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/Momabrochure.pdf'>moma handles brochure</a>
+  </div>
+      <div class="projectsTab">
+      🍰&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/bakebook.pdf'>typeset recipe book</a>
+  </div>
+  <div class="projectsTab">
+      👔&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/tie.jpeg'>how to tie a tie</a>
+  </div>
+  <div class="projectsTab">
+      🤼&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/debatefinal.pdf'>wim crouwel vs. van toorn</a>
+  </div>
+  <div class="projectsTab">
+      🍭&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/colorfilm.pdf'>color 35mm</a>
+  </div>
+  <div class="projectsTab">
+      🎞️&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/bwfilm.pdf'>b/w 35mm</a></a>
+  </div>
+  <div class="projectsTab">
+      📷&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/digitalpics.pdf'>digital photography</a></a>
+  </div>
+  <div class="projectsTab">
+      📹&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/vid2.mp4'>videography</a></a>
+  </div>
+  <div class="projectsTab">
+      🍎&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/wtc2.pdf'>wtc socials + oculus signage</a>
+  </div>
+  <div class="projectsTab">
+      👕&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/wtc1.pdf'>wtc merchandise</a>
+  </div>
+
+</div>
+
+
 
 </body>
-  <script type="text/javascript" src="main.js"></script>
+ <script src="typed.js"></script>
+ <script type="text/javascript" src="main.js"></script>
 </html>
