took out proj names list from HTML and appended JSON objects list to toggle bar
took out proj names list from HTML and appended JSON objects list to toggle bar

--- a/page2/index.html
+++ b/page2/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,43 +22,8 @@ i am a big fan of galliard, hojicha,schubert, books, and citibiking;) <br><br>  
 
 
  <div class="menu">
-<div id="projsHeading" class="slideDown"><mark>here are my projects</mark></div>
-      <div class="projectsTab">
-      🎨&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/pace.png'>pace gallery guide</a>
-  </div>
-       <div class="projectsTab">
-      🥗&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/sweetgreenvis.jpeg'>anatomy of sweetgreen</a>
- </div>
-      <div class="projectsTab">
-      🖼️&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/Momabrochure.pdf'>moma handles brochure</a>
-  </div>
-      <div class="projectsTab">
-      🍰&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/bakebook.pdf'>typeset recipe book</a>
-  </div>
-  <div class="projectsTab">
-      👔&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/tie.jpeg'>how to tie a tie</a>
-  </div>
-  <div class="projectsTab">
-      🤼&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/debatefinal.pdf'>wim crouwel vs. van toorn</a>
-  </div>
-  <div class="projectsTab">
-      🍭&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/colorfilm.pdf'>color 35mm</a>
-  </div>
-  <div class="projectsTab">
-      🎞️&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/bwfilm.pdf'>b/w 35mm</a></a>
-  </div>
-  <div class="projectsTab">
-      📷&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/digitalpics.pdf'>digital photography</a></a>
-  </div>
-  <div class="projectsTab">
-      📹&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/vid2.mp4'>videography</a></a>
-  </div>
-  <div class="projectsTab">
-      🍎&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/wtc2.pdf'>wtc socials + oculus signage</a>
-  </div>
-  <div class="projectsTab">
-      👕&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href='images/wtc1.pdf'>wtc merchandise</a>
-  </div>
+<div id="projectsHeading" class="slideDown"><mark>here are my projects</mark></div>
+      <div class="projectsTab"> </div>
 
 </div>
 
@@ -66,4 +32,4 @@ i am a big fan of galliard, hojicha,schubert, books, and citibiking;) <br><br>  
 </body>
  <script src="typed.js"></script>
  <script type="text/javascript" src="main.js"></script>
-</html>
+</html
