made text non repeating

--- a/page2/index.html
+++ b/page2/index.html
@@ -33,3 +33,4 @@ i am a big fan of galliard, hojicha,schubert, books, and citibiking;) <br><br>  
  <script src="typed.js"></script>
  <script type="text/javascript" src="main.js"></script>
 </html
+list
